--- a/Temas_fisica_moderna/Teoria_de_la_incertidumbre.html
+++ b/Temas_fisica_moderna/Teoria_de_la_incertidumbre.html
@@ -1,107 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-bs-theme="light" lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teoría de la incertidumbre</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .top-bar {
-            background-color: #333;
-            overflow: hidden;
-        }
-
-        .top-bar a {
-            float: left;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        .top-bar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        #incertidumbre {
-            background-color: black;
-            color: white;
-            text-align: center;
-            font-size: 36px;
-            padding: 10px 0;
-        }
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Teoria...</title>
+    <link rel="stylesheet" href="/assets/css/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
+    <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
+    <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
+   
 </head>
 
 <body>
-    <div class="top-bar">
-        <a href="\Optica.html">Óptica</a>
-        <a href="\Acustica.html">Acústica</a>
-        <a href="\Fisica_moderna.html">Física Moderna</a>
-        <a href="\Conversor.html">Conversor de Unidades</a>
-        <a href="\Sobre_nosotros.html">Sobre Nosotros</a>
-        <a href="\Calculadora.html">Calculadora</a>
-    </div>
-    <div id="incertidumbre">Teoría de la incertidumbre</div>
-    <div>
-        <h2>Teoría de la incertidumbre</h2>
-        <p>La Teoría de la Incertidumbre, también conocida como el Principio de Incertidumbre de Heisenberg, es un
-            concepto fundamental en la mecánica cuántica, formulado por el físico alemán Werner Heisenberg en 1927.</p>
-        <p>El principio establece que es imposible determinar simultáneamente y con precisión absoluta tanto la posición
-            como el momento (o velocidad) de una partícula subatómica. Esto no se debe a limitaciones en la tecnología
-            de medición, sino a la naturaleza misma de las partículas cuánticas.</p>
-        <p>En términos más simples, cuanto más precisamente sabemos la posición de una partícula, menos sabemos sobre su
-            momento, y viceversa. Esta relación intrínseca entre la posición y el momento se conoce como relación de
-            incertidumbre de posición-momento. Se puede expresar matemáticamente como:</p>
-        <p>Δx * Δp ≥ ħ/2 Donde:</p>
-        <ul>
-            <li>Δx es la incertidumbre en la posición de la partícula</li>
-            <li>Δp es la incertidumbre en el momento de la partícula</li>
-            <li>ħ es la constante de Planck reducida</li>
-        </ul>
-        <h2>La teoría de la incertidumbre de Heisenberg: Una mirada profunda a lo borroso del mundo cuántico</h2>
-        <p>En el corazón de la física cuántica reside un concepto fundamental que desafía nuestra intuición clásica: la
-            incertidumbre. El principio de incertidumbre de Heisenberg, postulado por el físico alemán Werner Heisenberg
-            en 1927, establece que existen límites inherentes a la precisión con la que podemos conocer simultáneamente
-            ciertas propiedades físicas de una partícula, como su posición y su momento.</p>
-        <p>En términos más simples, cuanto más precisamente sabemos la posición de una partícula, menos sabemos sobre su
-            momento, y viceversa. Esta relación intrínseca entre la posición y el momento se conoce como relación de
-            incertidumbre de posición-momento. Se puede expresar matemáticamente como:</p>
-        <p>Δx * Δp ≥ ħ/2 Donde:</p>
-        <ul>
-            <li>Δx es la incertidumbre en la posición de la partícula</li>
-            <li>Δp es la incertidumbre en el momento de la partícula</li>
-            <li>ħ es la constante de Planck reducida</li>
-        </ul>
-        <p>Esta relación fundamental tiene implicaciones profundas para nuestra comprensión del mundo a nivel cuántico.
-            Significa que es imposible determinar simultáneamente la posición y el momento de una partícula con perfecta
-            precisión.</p>
-        <h3>¿Pero por qué existe esta incertidumbre?</h3>
-        <p>La razón radica en la naturaleza dual de la onda-partícula de la materia a nivel cuántico. Las partículas
-            cuánticas, como los electrones, pueden exhibir tanto propiedades ondulatorias como de partículas. Cuando
-            intentamos medir la posición de una partícula, inevitablemente la perturbamos con un fotón (partícula de
-            luz). Esta interacción perturba el momento de la partícula, introduciendo una incertidumbre inevitable en
-            nuestra medición.</p>
-        <p>La incertidumbre de Heisenberg no se limita a la posición y el momento. Existen relaciones de incertidumbre
-            similares para otros pares de variables conjugadas, como la energía y el tiempo, o la carga y la fase. Estas
-            relaciones fundamentales son pilares de la mecánica cuántica y tienen un impacto significativo en diversos
-            fenómenos cuánticos, como la estructura atómica, la emisión de radiación y la conductividad eléctrica en
-            materiales.</p>
-    </div>
-
-    <script>
-        function redirigir(ruta) {
-            window.location.href = ruta;
-        }
-    </script>
-</body>
-
-</html>
+    <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
+                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
+                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
+                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-5">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="\Optica.html">Optica</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Acustica.html">Acustica</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Fisica_moderna.html">Fisica Moderna</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Sobre_nosotros.html">Sobre nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Calculadora.html">Calculadora</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container py-4 py-xl-5">
+        <div style="background-image:url(&quot;/assets/img/Fondo_Fisica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+            <div class="d-flex justify-content-center align-items-center" style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
+                <div class="d-flex align-items-center order-5" style="height:200px;">
+                    <div class="container">
+                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">TEORIA DE LA INCERTIDUMBRE</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="text-break">mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</p>
