Revert "ACTUALIZACION PARA LAS TEORIAS"
This reverts commit f02017c5b0a98080bc75fbc74aa3bc26f4694427.

--- a/Temas_acustica/Historia_acustica.html
+++ b/Temas_acustica/Historia_acustica.html
@@ -1,43 +1,87 @@
 <!DOCTYPE html>
-<html data-bs-theme="light" lang="en">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Historia</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
-    <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
-    <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Historia acústica</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .top-bar {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        .top-bar a {
+            float: left;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        .top-bar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        #historia {
+            background-color: black;
+            color: white;
+            text-align: center;
+            font-size: 36px;
+            padding: 10px 0;
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
-                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
-                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
-                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-5">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="\Optica.html">Optica</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Acustica.html">Acustica</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Fisica_moderna.html">Fisica Moderna</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Sobre_nosotros.html">Sobre nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Calculadora.html">Calculadora</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="container py-4 py-xl-5">
-        <div style="background-image:url(&quot;/assets/img/Fondo_Acustica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
-            <div class="d-flex justify-content-center align-items-center" style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
-                <div class="d-flex align-items-center order-5" style="height:200px;">
-                    <div class="container">
-                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">HISTORIA</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <p class="text-break">mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</p>
+    <div class="top-bar">
+        <a href="\Optica.html">Óptica</a>
+        <a href="\Acustica.html">Acústica</a>
+        <a href="\Fisica_moderna.html">Física Moderna</a>
+        <a href="\Conversor.html">Conversor de Unidades</a>
+        <a href="\Sobre_nosotros.html">Sobre Nosotros</a>
+        <a href="\Calculadora.html">Calculadora</a>
+    </div>
+    <div id="historia">Historia acústica</div>
+    <div>
+        <h2>Historia</h2>
+        <p>En la antigua Grecia, aproximadamente en el siglo VI a.C., Pitágoras realizó experimentos con cuerdas de
+            diferentes longitudes para entender la relación entre la longitud de la cuerda y el tono producido, sentando
+            así las bases para el estudio de la música y la acústica.</p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Acustica\Imagen1.png" alt="Historia acústica1">
+        <p>(By IA)</p>
+        <p>Durante el Renacimiento, en el siglo XV, Leonardo da Vinci investigó la propagación del sonido y su
+            influencia en la arquitectura. Sus estudios contribuyeron al entendimiento de cómo la forma y disposición de
+            los espacios afectan la calidad del sonido en lugares cerrados.</p>
+        <p>En esa misma época, el científico alemán Ernst Chladni realizó experimentos con placas de metal cubiertas de
+            arena para visualizar las vibraciones sonoras. Estos experimentos, llevados a cabo en el siglo XVIII,
+            sentaron las bases para el estudio de la resonancia y la formación de ondas acústicas.</p>
+        <p>Durante la Edad Media, músicos, compositores y arquitectos experimentaron con diferentes materiales, formas y
+            técnicas de construcción de instrumentos para mejorar la resonancia y la proyección del sonido. También
+            descubrieron la influencia de la arquitectura en la acústica de espacios cerrados como iglesias y
+            catedrales.</p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Acustica\Imagen2.png" alt="Historia acústica1">
+        <p>(By IA)</p>
+        <p>Hoy en día, con el avance de la tecnología, la acústica se ha convertido en una disciplina ampliamente
+            utilizada en diversos campos como la arquitectura, la música, la ingeniería de sonido y la medicina.
+            Mediante técnicas avanzadas, se busca mejorar la calidad del sonido en espacios cerrados, diseñar
+            instrumentos musicales más eficientes y realizar diagnósticos médicos más precisos. La investigación en
+            acústica continúa siendo dinámica, con constantes avances y descubrimientos.</p>
+    </div>
+
+    <script>
+        function redirigir(ruta) {
+            window.location.href = ruta;
+        }
+    </script>
+</body>
+
+</html>
