--- a/Temas_fisica_moderna/Particulas_subatomicas.html
+++ b/Temas_fisica_moderna/Particulas_subatomicas.html
@@ -1,43 +1,101 @@
 <!DOCTYPE html>
-<html data-bs-theme="light" lang="en">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Particulas</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
-    <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
-    <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Partículas subatómicas</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .top-bar {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        .top-bar a {
+            float: left;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        .top-bar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        #particulas {
+            background-color: black;
+            color: white;
+            text-align: center;
+            font-size: 36px;
+            padding: 10px 0;
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
-                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
-                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
-                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-5">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="\Optica.html">Optica</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Acustica.html">Acustica</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Fisica_moderna.html">Fisica Moderna</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Sobre_nosotros.html">Sobre nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Calculadora.html">Calculadora</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="container py-4 py-xl-5">
-        <div style="background-image:url(&quot;/assets/img/Fondo_Fisica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
-            <div class="d-flex justify-content-center align-items-center" style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
-                <div class="d-flex align-items-center order-5" style="height:200px;">
-                    <div class="container">
-                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">PARTICULAS SUBATOMICAS</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <p class="text-break">mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</p>
+    <div class="top-bar">
+        <a href="\Optica.html">Óptica</a>
+        <a href="\Acustica.html">Acústica</a>
+        <a href="\Fisica_moderna.html">Física Moderna</a>
+        <a href="\Conversor.html">Conversor de Unidades</a>
+        <a href="\Sobre_nosotros.html">Sobre Nosotros</a>
+        <a href="\Calculadora.html">Calculadora</a>
+    </div>
+    <div id="particulas">Partículas subatómicas</div>
+    <div>
+        <h2>Partículas subatómicas</h2>
+        <p>Las partículas subatómicas son los componentes fundamentales de la materia, más pequeñas que el átomo y
+            esenciales para entender la estructura y el comportamiento del universo a nivel microscópico.</p>
+        <h2>Partículas Elementales</h2>
+        <ul>
+            <li><strong>Electrones:</strong> Partículas cargadas negativamente, con una masa muy pequeña, pero que
+                ocupan la mayor parte del volumen del átomo.</li>
+            <li><strong>Quarks:</strong> Constituyentes de protones y neutrones, existen en seis tipos o “sabores”:
+                arriba, abajo, encanto, extraño, cima y fondo.</li>
+            <li><strong>Neutrinos:</strong> Partículas neutras con masa extremadamente pequeña, interactúan débilmente
+                con la materia.</li>
+        </ul>
+        <h2>Partículas Compuestas</h2>
+        <ul>
+            <li><strong>Protones:</strong> Compuestos por tres quarks (dos arriba y uno abajo), tienen carga positiva y
+                se encuentran en el núcleo del átomo.</li>
+            <li><strong>Neutrones:</strong> También compuestos por tres quarks (uno arriba y dos abajo), son neutrales y
+                contribuyen a la masa del núcleo.</li>
+        </ul>
+        <h2>Interacciones Fundamentales</h2>
+        <p>Las partículas subatómicas interactúan a través de cuatro fuerzas fundamentales:</p>
+        <ul>
+            <li><strong>Fuerza Electromagnética:</strong> Mediada por fotones, afecta a partículas con carga eléctrica.
+            </li>
+            <li><strong>Fuerza Nuclear Fuerte:</strong> Mantiene unidos a los quarks dentro de protones y neutrones,
+                mediada por gluones.</li>
+            <li><strong>Fuerza Nuclear Débil:</strong> Responsable de ciertos tipos de desintegración radiactiva,
+                mediada por bosones W y Z.</li>
+            <li><strong>Gravitación:</strong> Aunque no está completamente descrita en el contexto de la física de
+                partículas, afecta a todas las partículas con masa.</li>
+        </ul>
+        <p>El estudio de las partículas subatómicas comenzó en el siglo XIX con el descubrimiento del electrón. A lo
+            largo del tiempo, se han descubierto muchas otras partículas, muchas de las cuales son inestables y solo se
+            pueden observar en aceleradores de partículas.</p>
+        <p>El conocimiento de las partículas subatómicas ha llevado a importantes avances en nuestra comprensión del
+            mundo físico y ha tenido aplicaciones prácticas en campos como la medicina, la electrónica y la astrofísica.
+        </p>
+    </div>
+
+    <script>
+        function redirigir(ruta) {
+            window.location.href = ruta;
+        }
+    </script>
+</body>
+
+</html>
