--- a/Temas_acustica/Sonido.html
+++ b/Temas_acustica/Sonido.html
@@ -1,43 +1,96 @@
 <!DOCTYPE html>
-<html data-bs-theme="light" lang="en">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonido</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
-    <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
-    <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .top-bar {
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        .top-bar a {
+            float: left;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        .top-bar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        #sonido {
+            background-color: black;
+            color: white;
+            text-align: center;
+            font-size: 36px;
+            padding: 10px 0;
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
-                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
-                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
-                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-5">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="\Optica.html">Optica</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Acustica.html">Acustica</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Fisica_moderna.html">Fisica Moderna</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Sobre_nosotros.html">Sobre nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Calculadora.html">Calculadora</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="container py-4 py-xl-5">
-        <div style="background-image:url(&quot;/assets/img/Fondo_Acustica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
-            <div class="d-flex justify-content-center align-items-center" style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
-                <div class="d-flex align-items-center order-5" style="height:200px;">
-                    <div class="container">
-                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">SONIDO</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <p class="text-break">mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</p>
+    <div class="top-bar">
+        <a href="\Optica.html">Óptica</a>
+        <a href="\Acustica.html">Acústica</a>
+        <a href="\Fisica_moderna.html">Física Moderna</a>
+        <a href="\Conversor.html">Conversor de Unidades</a>
+        <a href="\Sobre_nosotros.html">Sobre Nosotros</a>
+        <a href="\Calculadora.html">Calculadora</a>
+    </div>
+    <div id="sonido">Sonido</div>
+    <div>
+        <h2>Sonido</h2>
+        <p>El sonido es una forma de energía que resulta de la vibración de partículas en un medio, típicamente aire. En
+            física, el estudio del sonido implica comprender las propiedades de las ondas sonoras, su propagación y cómo
+            interactúan con el entorno. Este ensayo profundizará en los conceptos fundamentales del sonido desde un
+            punto de vista físico, cubriendo temas como las ondas sonoras, la amplitud, el tono y la resonancia.</p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Acustica\Imagen4.png" alt="Historia acústica1">
+        <p>(By IA)</p>
+
+        <h2>Ondas Sonoras</h2>
+        <p>Las ondas sonoras son ondas longitudinales que se propagan a través de un medio al hacer que las partículas
+            en el medio oscilen paralelas a la dirección del viaje de la onda (Rossing et al., 2007). Estas ondas
+            consisten en compresiones y rarefacciones, donde las compresiones son regiones de alta presión y densidad, y
+            las rarefacciones son regiones de baja presión y densidad. La velocidad del sonido en un medio depende de
+            las propiedades del medio, como la temperatura y la densidad.</p>
+
+        <h2>Amplitud</h2>
+        <p>La amplitud es el desplazamiento máximo de las partículas desde su posición de equilibrio cuando una onda
+            sonora pasa a través de un medio (Rossing et al., 2007). Es una medida de la intensidad o volumen de una
+            onda sonora y está directamente relacionada con la energía transportada por la onda. Cuanto mayor sea la
+            amplitud, más fuerte será el sonido percibido por el oído humano.</p>
+
+        <h2>Tono</h2>
+        <p>El tono es el atributo perceptual del sonido que nos permite diferenciar entre sonidos de alta y baja
+            frecuencia (Rossing et al., 2007). Frecuencias más altas corresponden a tonos más altos, mientras que
+            frecuencias más bajas corresponden a tonos más bajos. El tono de una onda sonora está determinado por su
+            frecuencia, con frecuencias más altas produciendo sonidos de tono más alto y viceversa.</p>
+
+        <h2>Resonancia</h2>
+        <p>La resonancia es un fenómeno en el cual un objeto vibra a su frecuencia natural cuando se expone a una fuerza
+            externa a esa frecuencia (Rossing et al., 2007). En el contexto del sonido, la resonancia juega un papel
+            crucial en la música y los instrumentos musicales, donde ciertas frecuencias se amplifican debido a la
+            frecuencia natural del instrumento o la columna de aire dentro de él.</p>
+    </div>
+
+    <script>
+        function redirigir(ruta) {
+            window.location.href = ruta;
+        }
+    </script>
+</body>
+
+</html>
