--- a/Temas_acustica/Energia.html
+++ b/Temas_acustica/Energia.html
@@ -77,6 +77,10 @@
             influyendo en última instancia en la transferencia de energía. Esta dependencia de la temperatura es
             particularmente relevante para los instrumentos musicales, ya que las variaciones en la temperatura pueden
             afectar significativamente su calidad de sonido y afinación.</p>
+        <p>oPhysics. (n.d.). Open Air Column Resonance. Retrieved from https://ophysics.com/waves7.html
+            College Physics. (n.d.). Standing Waves in Air Columns. Retrieved from
+            https://pressbooks-dev.oer.hawaii.edu/collegephysics/chapter/17-5-sound-interference-and-resonance-standing-waves-in-air-columns/.
+        </p>
     </div>
 
     <script>
