--- a/Temas_acustica/Ley_inverso.html
+++ b/Temas_acustica/Ley_inverso.html
@@ -68,6 +68,8 @@
             del inverso del cuadrado. Esto significa que la intensidad del sonido disminuye rápidamente a medida que nos
             alejamos de la fuente, lo que tiene implicaciones importantes en la acústica y el diseño de espacios como
             auditorios (HyperPhysics).</p>
+        <p>Sonido, Ley del Inverso del Cuadrado. (s. f.). HyperPhysics. Recuperado de
+            http://hyperphysics.phy-astr.gsu.edu/hbasees/Acoustic/invsqs.html</p>
     </div>
 
 
