--- a/Temas_acustica/Ondas.html
+++ b/Temas_acustica/Ondas.html
@@ -73,6 +73,8 @@
             transmisión de energía. Por ejemplo, las ondas de radio se utilizan en la comunicación inalámbrica para
             transmitir información a largas distancias, mientras que las ondas infrarrojas se utilizan en los controles
             remotos para enviar señales entre dispositivos.</p>
+        <p>The Physics Classroom. (n.d.). Electromagnetic Waves. Retrieved from
+            https://www.physicsclassroom.com/class/waves/Lesson-4/Electromagnetic-Waves</p>
     </div>
     <script>
         function redirigir(ruta) {
