--- a/Temas_acustica/Sonido.html
+++ b/Temas_acustica/Sonido.html
@@ -84,6 +84,7 @@
             externa a esa frecuencia (Rossing et al., 2007). En el contexto del sonido, la resonancia juega un papel
             crucial en la música y los instrumentos musicales, donde ciertas frecuencias se amplifican debido a la
             frecuencia natural del instrumento o la columna de aire dentro de él.</p>
+        <p>Rossing, T. D., Moore, F. R., & Wheeler, P. A. (2007). The science of sound (3rd ed.). Addison-Wesley.</p>
     </div>
 
     <script>
