--- a/Temas_acustica/Deformacion.html
+++ b/Temas_acustica/Deformacion.html
@@ -73,6 +73,8 @@
             seguridad de las estructuras. Los ingenieros utilizan pruebas de deformación, como ensayos de tracción,
             compresión y flexión, para evaluar las propiedades mecánicas de los materiales y predecir su comportamiento
             bajo diferentes condiciones de carga (Callister & Rethwisch, 2018).</p>
+        <p>Callister, W. D., & Rethwisch, D. G. (2018). Materials Science and Engineering: An Introduction (10th ed.).
+            John Wiley & Sons. </p>
     </div>
 
     <script>
