--- a/Temas_acustica/Movimiento_ondulatorio.html
+++ b/Temas_acustica/Movimiento_ondulatorio.html
@@ -124,6 +124,11 @@
             órganos (Boron & Boulpaep, 2019). Por ejemplo, el movimiento ondulatorio de iones a través de membranas
             celulares es crucial en la generación de impulsos nerviosos y la regulación del latido cardíaco (Boron &
             Boulpaep, 2019).</p>
+        <p>Boron, W. F., & Boulpaep, E. L. (2019). Medical physiology: A cellular and molecular approach. Elsevier.
+            Crawford, F. S. (2012). Waves: The physics of oscillations and waves. Springer Science & Business Media.
+            Serway, R. A., & Jewett, J. W. (2018). Physics for scientists and engineers (10th ed.). Cengage Learning.
+        </p>
+
     </div>
 
     <script>
