--- a/Temas_acustica/Potencia.html
+++ b/Temas_acustica/Potencia.html
@@ -69,6 +69,8 @@
             eficaz de la corriente. Esta fórmula es válida porque, en un circuito resistivo, el voltaje y la corriente
             están en fase, y el poder promedio es igual al producto de los valores eficaces del voltaje y la corriente.
         </p>
+        <p>The Physics Classroom. (n.d.). Electromagnetic Waves. Retrieved from
+            https://www.physicsclassroom.com/class/waves/Lesson-4/Electromagnetic-Waves</p>
     </div>
 
     <script>
